# RaffleBot

./: .dockerignore  Dockerfile  README.md  create_bot.py  main.py  pyproject.toml  requirements.txt
bot/: create_bot.py
bot/core/keyboards/: main_kbs.py
bot/core/services/: api_client.py
bot/core/utils/: logger_config.py
bot/handlers/: __init__.py  start.py  webapp_handlers.py
bot/webapp/: main_front.py
src/core/keyboards/: kbs.py
src/handlers/: __init__.py  start.py
src/webapp/: main.py
