[project]
name = "bot"
version = "0.1.0"
description = "\"TG MINIAPPS RANDOMBOT\""
authors = [
    {name = "Ury Dol3wsky",email = "dol3wsky@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiogram (>=3.19.0,<4.0.0)",
    "fastapi (>=0.115.12,<0.116.0)",
    "uvicorn (>=0.34.0,<0.35.0)",
    "pydantic-settings (>=2.8.1,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
