[project]
name = "tgbot"
version = "1"
description = "\"TG MINIAPPS RANDOMBOT\""
authors = [
    {name = "Ury Dol3wsky",email = "dol3wsky@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiogram (>=3.19.0,<4.0.0)",
    "dotenv (>=0.9.9,<0.10.0)",
    "load-dotenv (>=0.1.0,<0.2.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
black = "^25.1.0"
isort = "^6.0.1"

